--- a/client/src/components/PromoPhotos/PromoPhotos.css
+++ b/client/src/components/PromoPhotos/PromoPhotos.css
@@ -1,6 +1,9 @@
 .promo-photos {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
 .promo-photos img {
