--- a/client/src/components/Review/Review.css
+++ b/client/src/components/Review/Review.css
@@ -1,5 +1,12 @@
+.review-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .review-body {
   display: flex;
+  justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
   margin: 50px 0;
